1.Computer-Science/6.Containerization/2.Kubernates/3.Manifest-Files/24.StatefulSet.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-headless                    # Name of the service referenced by StatefulSet.spec.serviceName.
spec:
  clusterIP: None                       # Headless service (no internal Cluster IP assigned).
                                        # Enables DNS entries like pod-0.svcname.namespace.svc.cluster.local
  selector:
    app: web                            # Selects Pods with label app=web.
  ports:
    - name: http
      port: 80                          # Exposes port 80 on the Service.
      targetPort: 80                    # Forwards traffic to container port 80.





#
# | Feature                | Deployment                       | StatefulSet                                      |
# | ---------------------- | -------------------------------- | ------------------------------------------------ |
# | Pod identity           | All pods are interchangeable     | Each pod has a **unique, stable identity**       |
# | Pod name               | Random suffix (e.g. `myapp-abc`) | Predictable: `myapp-0`, `myapp-1`                |
# | Pod order (start/stop) | Any order                        | **Sequentially ordered**                         |
# | Persistent volumes     | Shared or ephemeral              | **One persistent volume per pod**, bound by name |
# | Use case               | Stateless apps (web, API)        | Stateful apps (databases, brokers)               |
